--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,9 +1,9 @@
 version: "2"
 sql:
   - engine: "sqlite"
-    queries: "pkg/database/query.sql"
-    schema: "pkg/database/schema.sql"
+    queries: "database/query.sql"
+    schema: "database/schema.sql"
     gen:
       go:
         package: "gen"
-        out: "pkg/database/gen"
+        out: "database/gen"
